# ezstats

./: .gitignore  Cargo.toml  README.md  install.sh  install_from_release.sh  package_release.sh  uninstall.sh
.github/workflows/: ci.yml
src/: gpu.rs  mac_gpu.rs  main.rs  ui.rs  widget.rs
