[package]
name = "ezstats"
version = "0.1.0"
edition = "2021"

[dependencies]
sysinfo = "0.29.0"
crossterm = "0.26.0"
nvml-wrapper = { version = "0.9.0", optional = true }
metal = { version = "0.24.0", optional = true }
objc = { version = "0.2.7", optional = true }
core-foundation = { version = "0.9.3", optional = true }

[features]
default = []
nvidia-gpu = ["nvml-wrapper"]
apple-gpu = ["metal", "objc", "core-foundation"]