[package]
name = "ezstats"
version = "0.2.0"  # Bumped version for new features
edition = "2021"
authors = ["Jason Too <hello@elektrothing.com>"]
description = "A lightweight system monitoring tool with interactive UI"
readme = "README.md"
license = "CC0-1.0"
repository = "https://github.com/tooyipjee/ezstats"

[dependencies]
sysinfo = "0.29.0"
crossterm = "0.26.0"  # We're already using this for terminal manipulation
nvml-wrapper = { version = "0.9.0", optional = true }
metal = { version = "0.24.0", optional = true }
objc = { version = "0.2.7", optional = true }
core-foundation = { version = "0.9.3", optional = true }

[features]
default = []
nvidia-gpu = ["nvml-wrapper"]
apple-gpu = ["metal", "objc", "core-foundation"]