[package]
name = "ezstats"
version = "0.3.0"
edition = "2021"
authors = ["Jason Too <hello@elektrothing.com>"]
description = "A lightweight system monitoring tool with interactive UI"
readme = "README.md"
license = "CC0-1.0"
repository = "https://github.com/tooyipjee/ezstats"

[dependencies]
sysinfo = "0.29.0"
crossterm = "0.26.0"
# NVIDIA GPU support - made optional but always included in build
nvml-wrapper = { version = "0.9.0", optional = true }

[features]
default = ["nvidia-gpu"]
nvidia-gpu = ["nvml-wrapper"]